Add ChangePassword form to account settings

--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -1062,7 +1062,7 @@ div.message-image div.btn-group:only-child {
 }
 
 
-.profile-settings-form {
+.settings-form {
     padding-top: 30px;
     padding-left: 20px;
 }
