--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -228,10 +228,7 @@ ol.dropdown-menu li:not(.divider), ol.dropdown-menu li:not(.divider) > a {
     bottom: 0px;
     height: auto;
     left: 0px;
-    margin-bottom: 2px;
-    margin-left: 0;
-    margin-right: 0px;
-    margin-top: 2px;
+    margin: 2px;
     padding: 0;
     position: absolute;
     right: 0px;
@@ -258,7 +255,7 @@ ol.dropdown-menu li:not(.divider), ol.dropdown-menu li:not(.divider) > a {
     border-width: 1px;
     border-style: solid;
     border-radius: 5px;
-    margin: 2px 4px;
+    margin: 0;
     overflow: visible;
 }
 
@@ -291,7 +288,7 @@ ol.dropdown-menu li:not(.divider), ol.dropdown-menu li:not(.divider) > a {
     right: 0;
 }
 
-.subheader-wrapper .button-wrapper {
+.subheader .button-wrapper {
     padding: 5px 11px 0px 11px;
 }
 
@@ -460,19 +457,22 @@ div.page-overlay>.overlay-body.fullscreen-overlay {
     border-radius: 5px;
     bottom: 0px;
     left: 0px;
-    margin: 2px;
     overflow: hidden;
     position: absolute;
     right: 0px;
     top: 0px;
 }
 
-.leftrow .panel-wrapper {
-    margin-left: 4px;
+.panel-spacing {
+    margin: 2px;
 }
 
-.rightrow .panel-wrapper {
-    margin-right: 4px;
+.panel-overflow {
+    overflow: visible;
+}
+
+.panel-overflow > .panel > .panel-body {
+    overflow: visible;
 }
 
 .slide-left {
@@ -1010,22 +1010,12 @@ form.create-conversation-form input, form.create-conversation-form textarea {
     margin-bottom: 2px;
 }
 
-.chat-widget-input .column2of2 {
-    margin: 0;
-}
-
-.chat-widget-input .column1of2 textarea {
-    height: 3em;
-    margin-left: 2px;
-    margin-right: 2px;
-    margin-top: 2px;
-    position: absolute;
+.chat-widget-input-textarea {
     resize: none;
-    right: 0;
-    left: 0;
-    top: 0;
-    bottom: 30px;
-    width: 97%;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     background-color: rgb(255, 255, 255);
     border-color: #c4c4c4;
     border-width: 1px;
@@ -1033,26 +1023,16 @@ form.create-conversation-form input, form.create-conversation-form textarea {
     border-radius: 5px;
 }
 
-.choose-or-upload-image-button {
-    width: 98%;
-    position: absolute;
-    margin: 2px 4px 4px 4px;
-    top: 0;
-    right: 0;
-    left: 0;
-    height: 50px;
+.chat-widget-input-button {
     border-radius: 5px;
 }
 
-.chat-widget-input-send-button {
-    width: 97%;
-    position: absolute;
-    margin: 2px 4px 4px 4px;
-    top: 0;
-    right: 0;
-    left: 0;
+.chat-widget-input-button-wrapper {
     height: 50px;
-    border-radius: 5px;
+}
+
+.chat-widget-input-spacing {
+    margin: 2px;
 }
 
 .chat-widget-input .control-group-checkbox {
@@ -1361,6 +1341,11 @@ input[readonly].faux-textfield, textarea[readonly].faux-textarea {
 /* Workspace Widgets
 *******************************************************************/
 
+.workspace {
+    width: 100%;
+    height: 100%;
+}
+
 .workspace-widget {
 
 }
@@ -1458,27 +1443,6 @@ input[readonly].faux-textfield, textarea[readonly].faux-textarea {
     margin-bottom: 10px;
 }
 
-.file-upload-widget .btn-toolbar:first-child {
-    margin-bottom: 0px;
-}
-
-.file-upload-widget .btn-toolbar:last-child {
-    margin-top: 5px;
-    margin-bottom: 0px;
-}
-
-.file-upload-widget .control-group {
-    width: 100%;
-}
-
-.file-upload-widget .control-group .control-label {
-    width: 17%;
-}
-
-.file-upload-widget .btn-toolbar:last-child .btn-group {
-    width: 82%;
-}
-
 .file-upload-item {
     margin-bottom: 8px;
 }
@@ -1563,33 +1527,6 @@ input[readonly].faux-textfield, textarea[readonly].faux-textarea {
     padding-right: 10px;
 }
 
-#image-upload-add-by-url-container {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 0px;
-}
-
-#image-upload-add-by-url-container .control-label {
-    width: 17%;
-}
-
-#image-upload-add-by-url-container .controls {
-    margin-left: 0px;
-}
-
-#image-upload-add-by-url-container .controls input {
-    width: 60%;
-    margin-left: 5px;
-}
-
-#image-upload-add-by-url-container .controls button {
-    height: 30px;
-    opacity: 1;
-    margin-left: 5px;
-}
-
 
 /* Other
 *******************************************************************/
@@ -1634,6 +1571,12 @@ pre code {
 
 .row-fluid .span0 {
     width: 0px;
+}
+
+.btn-fill {
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 
